--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.3.0
 cycler==0.12.1
+Faker==30.1.0
 Flask==3.0.3
 Flask-DebugToolbar==0.16.0
 fonttools==4.54.1
@@ -33,6 +34,7 @@ requests==2.32.3
 six==1.16.0
 soupsieve==2.6
 tenacity==9.0.0
+typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 webencodings==0.5.1
